# ParallelAndDistributedProgramming

./: README.md
Distributed_protocols_lab8/: DSM.cpp  DSM.hpp  Distributed_protocols_lab8.sln  Process.cpp  Process.hpp  main.cpp
Futures_continuations_lab4/: AsyncAwaitTasks.cs  Callbacks.cs  Futures_continuations_lab4.sln  HttpUtils.cs  Program.cs  State.cs  Tasks.cs
Hamiltonean_cycle_lab6/: DirectedGraph.cpp  DirectedGraph.hpp  Hamiltonean_cycle_lab6.sln  Node.cpp  Node.hpp  main.cpp
MPI_polynomials_multiplication_lab7/: KaratsubaMultiplication.cpp  KaratsubaMultiplication.hpp  MPI_polynomials_multiplication_lab7.sln  Multiplication.cpp  Multiplication.hpp  RegularMultiplication.cpp  RegularMultiplication.hpp  main.cpp
N_coloring_graph_project/: CMakeLists.txt  configure.sh
N_coloring_graph_project/inc/: node.hpp  threads.hpp  withMPI.hpp
N_coloring_graph_project/src/: main.cpp  node.cpp  threads.cpp  withMPI.cpp
Polynomials_multiplication_lab5/: KaratsubaAlgorithm.cpp  KaratsubaAlgorithm.hpp  KaratsubaAlgorithmParallelized.cpp  KaratsubaAlgorithmParallelized.hpp  Polynomials_multiplication_lab5.sln  RegularAlgorithm.cpp  RegularAlgorithm.hpp  RegularAlgorithmParallelized.cpp  RegularAlgorithmParallelized.hpp  main.cpp
Producer_consumer_lab2/: Producer_consumer_lab2.sln  main.cpp
Product_matrices_lab3/: Matrix.cpp  Matrix.hpp  MatrixMultiplication.cpp  MatrixMultiplication.hpp  Product_matrices_lab3.sln  ThreadPool.cpp  ThreadPool.hpp  main.cpp
Supermarket_inventory_lab1/: Bill.cpp  Bill.hpp  Inventory.cpp  Inventory.hpp  Product.cpp  Product.hpp  (+6 more)
(+1 files in other folders)
